RESOLVED FIXED85008
A TileCache should never outlive its WebTileCacheLayer
https://bugs.webkit.org/show_bug.cgi?id=85008
Summary A TileCache should never outlive its WebTileCacheLayer
Anders Carlsson
Reported 2012-04-26 14:46:42 PDT
A TileCache should never outlive its WebTileCacheLayer
Attachments
Patch (3.59 KB, patch)
2012-04-26 14:49 PDT, Anders Carlsson
kling: review+
Anders Carlsson
Comment 1 2012-04-26 14:49:05 PDT
Anders Carlsson
Comment 2 2012-04-26 15:02:46 PDT
Note You need to log in before you can comment on or make changes to this bug.