Source/WebCore/platform/graphics/ca/mac/WebTileCacheLayer.h
@@ -38,5 +38,6 @@ namespace WebCore {
 
 - (CALayer *)tileContainerLayer;
 - (WebCore::TiledBacking*)tiledBacking;
+- (void)invalidate;
 
 @end
